--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,3 @@
-language: ruby
-script: "echo 'Hello, build scripts are working. Yay'"
-env:
-  - JOB=1
-  - JOB=2
-  - JOB=3
-  - JOB=4
-  - JOB=5
-  - JOB=6
-  - JOB=7
-  - JOB=8
-  - JOB=9
-  - JOB=10
-  - JOB=11
-  - JOB=12
-  - JOB=13
-  - JOB=14
-  - JOB=15
-
+language:
+  - java
+script: "echo 'It works. Whoo.'"
