--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
-language: objective-c
-osx_image: mavericks
-script: security show-keychain-info
+language: ruby
+ruby: 2.1.1
+script:
+  - gem install travis
+  - travis status -r travis-ci/travis-core
