--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ ruby:
   - jruby-1.7-19mode
   - 2.1.1
   - ruby-head
+  - rbx-2.2.6
+  - ree-1.8.7-2011.12
+  - mruby-1.0
+  - maglev-1.0
 script:
   - bundle exec rake hello_world
