Print casher stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ cache:
 script:
   - "touch something-to-cache/$(date '+%s')"
   - "ls something-to-cache"
+after_success:
+  - "for f in ~/.casher/*; do echo $f; cat $f; echo; done"
