test new bundler things

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,2 @@
-language: objective-c
-cache:
-  directories:
-    - something-to-cache
-script:
-  - "touch something-to-cache/$(date '+%s')"
-  - "ls something-to-cache"
-after_success:
-  - "for f in ~/.casher/*; do echo $f; cat $f; echo; done"
+language: ruby
+script: ruby -rbundler/setup -e 'p $LOAD_PATH'
