--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: objective-c
-script: "xctool --version"
+
 osx_image: xcode61
+
+env:
+  - JOSH=cool
+  - JOSH=super_cool
+  - JOSH=mega_cool
+
+before_script: "xctool --version"
+
+script: "echo Josh is $JOSH"
