add a matrix entry

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ osx_image: xcode61
 env:
   - JOSH=cool
   - JOSH=super_cool
-  # - JOSH=mega_cool
+  - JOSH=mega_cool
   # - JOSH=hawt
   # - JOSH=ballin
   # - JOSH=sweet_as
