--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,4 @@
 language: objective-c
-
 osx_image: xcode61
-
-env:
-  - JOSH=cool
-  - JOSH=super_cool
-  - JOSH=mega_cool
-  # - JOSH=hawt
-  # - JOSH=ballin
-  # - JOSH=sweet_as
-  # - JOSH=awesome
-  # - JOSH=tumeke
-  # - JOSH=brilliant
-
 before_script: "xctool --version"
-
-script: "echo Josh is $JOSH"
+script: "pod --version"
