--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,15 @@ language: ruby
 sudo: true
 install: echo Hello
 script: echo world
+env:
+  matrix:
+    - JOB=1
+    - JOB=2
+    - JOB=3
+    - JOB=4
+    - JOB=5
+    - JOB=6
+    - JOB=7
+    - JOB=8
+    - JOB=9
+    - JOB=10
