--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,4 @@
 language: objective-c
 osx_image: xcode611
 install: pod --version
-script: xctool --version
-env:
-  matrix:
-    - JOB=1
-    - JOB=2
-    - JOB=3
-    - JOB=4
-    - JOB=5
-    - JOB=6
-    - JOB=7
-    - JOB=8
-    - JOB=9
-    - JOB=10
+script: rvm list
