--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: objective-c
-osx_image: xcode611
-install: pod --version
-script: rvm list
+language: ruby
+install: ls /dev
+script: echo "YESSS"
+sudo: false
